# kkd

cpp/: CMakeLists.txt  LICENSE  Makefile
cpp/include/: Task.hpp
cpp/src/: CMakeLists.txt
cpp/tests/: CMakeLists.txt  TestTask.cpp
